# SP_podgotvitelna

./: CMakeLists.txt  main.c
ciklusi/: zad1.c  zad10.c  zad2.c  zad3.c  zad4.c  zad5.c  zad6.c  zad7.c  zad8.c  zad9.c
